🔨 BUG / Overflow languages card bug fixed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: 1px solid black;
 }
 
 h1,
@@ -40,10 +41,13 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
+    min-height: 100vh;
 }
 
 .hero__info {
     width: 100%;
+    border: 1px solid red;
 }
 
 .hero__title {
@@ -87,6 +91,7 @@ body {
     display: grid;
     place-items: center;
     width: 100%;
+    border: 1px solid red;
 }
 
 .hero__profile {
@@ -155,9 +160,9 @@ body {
 }
 
 .languages__container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
 }
 
 .languages__card {
@@ -239,5 +244,10 @@ body {
     .hero__contact {
         padding: 0.7rem 2.5rem;
         display: inline;
+    }
+
+    .languages__container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
